Add logger, remove redundant vendimia/routing

--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     "require": {
         "php": "^8.1",
         "vendimia/core": "^0.1",
-        "vendimia/routing": "^0.2",
         "vlucas/phpdotenv": "^5.4",
         "vendimia/database": "^0.1.42",
-        "vendimia/http": "^0.1.7"
+        "vendimia/form": "^0.1.18",
+        "vendimia/logger": "^0.0.6"
     }
 }
